Wed Nov 10 02:28:28 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * config/splice_ts_defaults.mpb:

          Updated the idlflags statement to include a new location since
          the location of the IDL files changed in OpenSplice DDS 5.3.

Thu Nov  4 11:38:47 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/WixWorkspaceCreator.pm:

          Fixed fuzz error.

Wed Nov  3 16:42:10 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/CDT6WorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WixWorkspaceCreator.pm:

          Re-enabled the wix "make_group" flag.

Wed Nov  3 15:41:16 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/VC7WorkspaceCreator.pm:

          Temporarily removed wix "make_group" flag.

Wed Nov  3 15:37:12 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * modules/CDT6WorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/WixWorkspaceCreator.pm:

          Temporarily removed wix "make_group" flag.

Wed Nov  3 14:53:37 UTC 2010  Charles Calkins  <calkinsc@ociweb.com>

        * docs/templates/wix.txt:
        * modules/CDT6WorkspaceCreator.pm:
        * modules/TemplateParser.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WixProjectCreator.pm:
        * modules/WixWorkspaceCreator.pm:
        * templates/wix.mpd:
        * templates/wix.mpt:
        * templates/wixcs.mpd:
        * templates/wixcs.mpt:

          Extended the "wix" project type to support C#, decorated names,
          internationalized .NET resources, and generation of components
          and groups based on configurations and platforms.

Wed Nov  3 14:31:32 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/StringProcessor.pm:
        * modules/TemplateInputReader.pm:

          Allow a - character in a template variable scope name.
