@@ -1,3 +1,9 @@
+Fri Nov 12 08:49:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * modules/TemplateParser.pm:
+          Committed fix from Adam Mitz that fixed problems with dds4ccm and
+          cdt6/cdt7
+
 Wed Nov 10 02:28:28 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * config/splice_ts_defaults.mpb:
